--- a/castle/View/Base.lproj/Main.storyboard
+++ b/castle/View/Base.lproj/Main.storyboard
@@ -169,26 +169,67 @@
             </objects>
             <point key="canvasLocation" x="-95" y="-10"/>
         </scene>
-        <!--View Controller-->
+        <!--Chateaux Info View Controller-->
         <scene sceneID="DL3-e7-LUY">
             <objects>
-                <viewController id="h9A-lE-oc9" sceneMemberID="viewController">
+                <viewController id="h9A-lE-oc9" customClass="ChateauxInfoViewController" customModule="castle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PDO-xS-EOk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H8B-NY-vy3">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Chateaux" id="wwQ-uJ-EBs">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="zBh-Ol-uPP">
+                                            <connections>
+                                                <action selector="finished:" destination="h9A-lE-oc9" id="CFa-0Q-5mW"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Exemple" translatesAutoresizingMaskIntoConstraints="NO" id="QYe-sd-17m">
+                                <rect key="frame" x="17" y="70" width="341" height="193"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="341" id="Vh2-a5-bZM"/>
+                                    <constraint firstAttribute="height" constant="193" id="lET-yF-lM8"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yOt-yd-KPd">
+                                <rect key="frame" x="5" y="268" width="365" height="394"/>
+                                <mutableString key="text">"Chateaux" est un jeu de stratégie à 2, 3 ou 4 joueurs. Votre but est de capturer toute les chateaux des autres joueurs. Chaque joueur a une couleur. Chaque map est généré aléatoirement, vous aurez donc tout le temps de nouvelles maps. L’image ci dessus est un exemple de map possible à deux joueurs. Pour capturer les autres chateau il faut cliquer sur les routes de votre couleur. Cliquer sur une route va envoyer la moitié des unités présentes dans votre chateau en direction de la base au bout de la route. Chaque chateau gagne une unité par seconde à l’exception des chateaux marron qui sont considérés comme neutre (jusqu’a ce que quelqu’un les capturent). ⚠️: Chaque chateau a une capacité d’accueil maximale, ne laissez donc pas trainé trop longtemps vos unités dans vos chateaux ;)
+Bon jeu !</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="QYe-sd-17m" firstAttribute="top" secondItem="H8B-NY-vy3" secondAttribute="bottom" constant="6" id="0dR-gk-qgK"/>
+                            <constraint firstItem="WSZ-mc-mgh" firstAttribute="trailing" secondItem="yOt-yd-KPd" secondAttribute="trailing" constant="5" id="4Fl-V5-dDq"/>
+                            <constraint firstItem="H8B-NY-vy3" firstAttribute="trailing" secondItem="WSZ-mc-mgh" secondAttribute="trailing" id="AGt-XE-zjS"/>
+                            <constraint firstItem="yOt-yd-KPd" firstAttribute="top" secondItem="QYe-sd-17m" secondAttribute="bottom" constant="5" id="Apb-ru-Fx5"/>
+                            <constraint firstItem="QYe-sd-17m" firstAttribute="centerX" secondItem="PDO-xS-EOk" secondAttribute="centerX" id="OdI-l5-s2k"/>
+                            <constraint firstItem="H8B-NY-vy3" firstAttribute="top" secondItem="WSZ-mc-mgh" secondAttribute="top" id="PWH-X4-rSp"/>
+                            <constraint firstItem="H8B-NY-vy3" firstAttribute="leading" secondItem="WSZ-mc-mgh" secondAttribute="leading" id="X2M-NE-PO0"/>
+                            <constraint firstItem="yOt-yd-KPd" firstAttribute="leading" secondItem="WSZ-mc-mgh" secondAttribute="leading" constant="5" id="aoH-kw-1ej"/>
+                            <constraint firstItem="WSZ-mc-mgh" firstAttribute="bottom" secondItem="yOt-yd-KPd" secondAttribute="bottom" constant="5" id="b60-rx-dei"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="WSZ-mc-mgh"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bkE-pD-2ja" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="790" y="-10"/>
+            <point key="canvasLocation" x="765.60000000000002" y="-10.344827586206897"/>
         </scene>
     </scenes>
     <resources>
         <image name="2players" width="80" height="80"/>
         <image name="3players" width="80" height="80"/>
         <image name="4players" width="80" height="80"/>
+        <image name="Exemple" width="1110" height="623"/>
         <image name="castleIcon" width="151" height="151"/>
         <image name="reloadButton" width="184" height="186"/>
         <image name="retour" width="92" height="93"/>
