--- a/Multiplayers Game/View/Base.lproj/Main.storyboard
+++ b/Multiplayers Game/View/Base.lproj/Main.storyboard
@@ -117,6 +117,14 @@
                                     <segue destination="h9A-lE-oc9" kind="show" id="j8e-tO-ZCK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpz-gC-qZj">
+                                <rect key="frame" x="164" y="226" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="race:" destination="BV1-FR-VrT" eventType="touchUpInside" id="vZf-ZN-puv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
@@ -158,6 +166,7 @@
                         <outletCollection property="menuButton" destination="dQN-Tk-YzG" collectionClass="NSMutableArray" id="CE9-ax-Sg2"/>
                         <outletCollection property="menuButton" destination="KPR-rX-IIj" collectionClass="NSMutableArray" id="8eD-om-yOJ"/>
                         <outletCollection property="menuButton" destination="JmK-8V-9aB" collectionClass="NSMutableArray" id="HXA-Ap-mpN"/>
+                        <outletCollection property="menuButton" destination="cpz-gC-qZj" collectionClass="NSMutableArray" id="VA7-AO-Xr0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
