--- a/Multiplayers Game/View/Base.lproj/Main.storyboard
+++ b/Multiplayers Game/View/Base.lproj/Main.storyboard
@@ -111,42 +111,61 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JmK-8V-9aB">
-                                <rect key="frame" x="79" y="201" width="22" height="22"/>
+                                <rect key="frame" x="79" y="200" width="22" height="22"/>
                                 <accessibility key="accessibilityConfiguration" identifier="chateau"/>
                                 <connections>
                                     <segue destination="h9A-lE-oc9" kind="show" id="j8e-tO-ZCK"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpz-gC-qZj">
-                                <rect key="frame" x="164" y="226" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpz-gC-qZj">
+                                <rect key="frame" x="135" y="196" width="90" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="Ijs-bB-j0j"/>
+                                    <constraint firstAttribute="height" constant="90" id="Z43-ub-Ew4"/>
+                                </constraints>
+                                <state key="normal" image="raceIcon"/>
                                 <connections>
                                     <action selector="race:" destination="BV1-FR-VrT" eventType="touchUpInside" id="vZf-ZN-puv"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6wv-Xp-U3g">
+                                <rect key="frame" x="199" y="200" width="22" height="22"/>
+                                <accessibility key="accessibilityConfiguration" identifier="chateau"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Race" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7e-Ar-feH">
+                                <rect key="frame" x="160.5" y="294" width="39" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="M5e-Qe-3dy" firstAttribute="centerX" secondItem="KPR-rX-IIj" secondAttribute="centerX" id="3e7-fH-ugT"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="fud-9a-Gxl" secondAttribute="bottom" constant="4" id="5qS-7r-Z62"/>
+                            <constraint firstItem="cpz-gC-qZj" firstAttribute="leading" secondItem="KPR-rX-IIj" secondAttribute="trailing" constant="30" id="7Bh-FP-MTW"/>
                             <constraint firstItem="KPR-rX-IIj" firstAttribute="centerX" secondItem="GTo-rZ-19f" secondAttribute="centerX" id="7GC-dP-hQr"/>
+                            <constraint firstItem="cpz-gC-qZj" firstAttribute="top" secondItem="6wv-Xp-U3g" secondAttribute="bottom" constant="-26" id="7GO-aK-iD1"/>
                             <constraint firstItem="AtU-13-Pjt" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="5" id="8h2-6M-bpQ"/>
                             <constraint firstItem="dQN-Tk-YzG" firstAttribute="top" secondItem="RyW-qp-pyV" secondAttribute="bottom" constant="10" id="9hN-1W-nyb"/>
                             <constraint firstItem="GTo-rZ-19f" firstAttribute="top" secondItem="KPR-rX-IIj" secondAttribute="bottom" constant="8" id="BZR-Bn-hrI"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="Jto-8r-JjT" secondAttribute="trailing" constant="5" id="JJz-Tb-Hra"/>
-                            <constraint firstItem="GTo-rZ-19f" firstAttribute="top" secondItem="JmK-8V-9aB" secondAttribute="bottom" constant="71" id="LdA-OR-Y7e"/>
                             <constraint firstItem="AiO-gp-MSd" firstAttribute="top" secondItem="RyW-qp-pyV" secondAttribute="bottom" constant="10" id="M1G-b5-QYU"/>
+                            <constraint firstItem="cpz-gC-qZj" firstAttribute="top" secondItem="AiO-gp-MSd" secondAttribute="bottom" constant="50" id="Nh3-8V-Oeb"/>
                             <constraint firstItem="KPR-rX-IIj" firstAttribute="top" secondItem="M5e-Qe-3dy" secondAttribute="bottom" constant="50" id="Pa9-Ag-jsL"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="AtU-13-Pjt" secondAttribute="bottom" constant="5" id="Rl3-wa-roO"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="trailing" secondItem="dQN-Tk-YzG" secondAttribute="trailing" constant="20" id="SsR-QS-jIe"/>
-                            <constraint firstItem="JmK-8V-9aB" firstAttribute="centerX" secondItem="M5e-Qe-3dy" secondAttribute="centerX" constant="30" id="T7r-AK-Ujy"/>
                             <constraint firstItem="M5e-Qe-3dy" firstAttribute="top" secondItem="RyW-qp-pyV" secondAttribute="bottom" constant="10" id="Ue5-MB-8yQ"/>
+                            <constraint firstItem="JmK-8V-9aB" firstAttribute="leading" secondItem="KPR-rX-IIj" secondAttribute="trailing" constant="-26" id="YIA-B6-MOb"/>
                             <constraint firstItem="RyW-qp-pyV" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="dTW-8T-aXZ"/>
                             <constraint firstItem="fud-9a-Gxl" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="gHC-jF-Hhu"/>
+                            <constraint firstItem="6wv-Xp-U3g" firstAttribute="leading" secondItem="cpz-gC-qZj" secondAttribute="trailing" constant="-26" id="hck-l2-iCb"/>
                             <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="Jto-8r-JjT" secondAttribute="bottom" constant="5" id="jBK-Yg-wGu"/>
+                            <constraint firstItem="k7e-Ar-feH" firstAttribute="centerX" secondItem="cpz-gC-qZj" secondAttribute="centerX" id="jjQ-8c-gHT"/>
                             <constraint firstItem="RyW-qp-pyV" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" id="lXV-X4-Yml"/>
+                            <constraint firstItem="KPR-rX-IIj" firstAttribute="top" secondItem="JmK-8V-9aB" secondAttribute="bottom" constant="-26" id="ows-Qt-yCQ"/>
+                            <constraint firstItem="k7e-Ar-feH" firstAttribute="top" secondItem="cpz-gC-qZj" secondAttribute="bottom" constant="8" id="plw-k5-qVJ"/>
                             <constraint firstItem="M5e-Qe-3dy" firstAttribute="leading" secondItem="4qk-I5-YsI" secondAttribute="leading" constant="20" id="qGN-2t-yAh"/>
                             <constraint firstItem="AiO-gp-MSd" firstAttribute="centerX" secondItem="3se-qz-xqx" secondAttribute="centerX" id="xAg-Xm-3jP"/>
                         </constraints>
@@ -167,6 +186,8 @@
                         <outletCollection property="menuButton" destination="KPR-rX-IIj" collectionClass="NSMutableArray" id="8eD-om-yOJ"/>
                         <outletCollection property="menuButton" destination="JmK-8V-9aB" collectionClass="NSMutableArray" id="HXA-Ap-mpN"/>
                         <outletCollection property="menuButton" destination="cpz-gC-qZj" collectionClass="NSMutableArray" id="VA7-AO-Xr0"/>
+                        <outletCollection property="menuButton" destination="6wv-Xp-U3g" collectionClass="NSMutableArray" id="VKl-hp-UrS"/>
+                        <outletCollection property="menuLabel" destination="k7e-Ar-feH" collectionClass="NSMutableArray" id="GJy-JR-xoW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
@@ -176,7 +197,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-95" y="-10"/>
+            <point key="canvasLocation" x="-95.200000000000003" y="-10.344827586206897"/>
         </scene>
         <!--Chateaux Info View Controller-->
         <scene sceneID="DL3-e7-LUY">
@@ -239,7 +260,8 @@ Bon jeu !</string>
         <image name="3players" width="80" height="80"/>
         <image name="4players" width="80" height="80"/>
         <image name="Exemple" width="1110" height="623"/>
-        <image name="castleIcon" width="151" height="151"/>
+        <image name="castleIcon" width="500" height="500"/>
+        <image name="raceIcon" width="500" height="500"/>
         <image name="reloadButton" width="184" height="186"/>
         <image name="retour" width="92" height="93"/>
     </resources>
